增加了世界杯卡相关的改动

--- a/ProductDetail.html
+++ b/ProductDetail.html
@@ -54,7 +54,7 @@
 				<p>1<span>w+</span></p>
 			</div>
 			<a class="melody-btn"><img src="img/music.png" /></a>
-			<a class="music-btn"><img src="img/iconcup.png" /></a>
+			<a class="music-btn"><img /></a>
 		</div>
 		<script type="text/x-handlebars-template" id="ran-series-1-tpl">
 			<!--燃系列1-->
@@ -141,7 +141,7 @@
 					</div>
 				</div>
 				<div class="card-slogan">
-					我的激情 我们的目标
+					足球、我的激情，奖杯、我们的目标。
 				</div>
 			</div>
 		</script>
